<resources>
    <string name="app_name">Thermal Camera</string>
    <string name="waiting_for_camera">Connect thermal camera</string>
    <string name="colormap">Color</string>
    <string name="contrast_down">-</string>
    <string name="contrast_up">+</string>
    <string name="rounding_none">0.0</string>
    <string name="rounding_0_2">0.2</string>
    <string name="rounding_0_5">0.5</string>
    <string name="capture">Snap</string>
    <string name="rotate">0\u00B0</string>

    <!-- Content descriptions for accessibility -->
    <string name="desc_colormap">Cycle colormap</string>
    <string name="desc_rotate">Rotate 90 degrees</string>
    <string name="desc_mirror">Toggle mirror</string>
    <string name="desc_screenshot">Take screenshot</string>
    <string name="desc_more">More options</string>

    <!-- Overflow menu items -->
    <string name="menu_contrast_down">Contrast -</string>
    <string name="menu_contrast_up">Contrast +</string>
    <string name="menu_rounding_none">Rounding: None</string>
    <string name="menu_rounding_0_2">Rounding: 0.2\u00B0C</string>
    <string name="menu_rounding_0_5">Rounding: 0.5\u00B0C</string>
    <string name="menu_camera_info">Camera Info</string>
    <string name="menu_app_info">App info</string>
    <string name="menu_disable_scale">Disable Scale</string>
    <string name="menu_show_scale">Show min/max points</string>
    <string name="menu_scale_lock">Lock scale</string>
    <string name="menu_scale_adjust">Adjust scale range\u2026</string>
    <string name="menu_temp_conversion">Fahrenheit</string>
    <string name="dialog_scale_min">Min temperature (\u00B0C)</string>
    <string name="dialog_scale_max">Max temperature (\u00B0C)</string>
</resources>
